# voxel_pathtracer

./: ;w  CMakeLists.txt  TODO  readme.md
libs/glad/: CMakeLists.txt  glad.c  glad.h
src/app/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
src/blueprints/: camera.cpp  camera.h  voxel.cpp  voxel.h
src/core/: time.cpp  time.h
src/core/utils/: CMakeLists.txt  shader_tools.cpp  shader_tools.h
src/platform/input/: CMakeLists.txt  keyboard.h  mouse.cpp  mouse.h
src/platform/window/: window.cpp  window.h
src/renderer/: CMakeLists.txt  render.cpp  render.h  screen_texture.cpp  screen_texture.h
src/scenes/: scene.cpp  scene.h
src/shaders/: screen.comp  screen.frag  screen.vert
tmp/: CMakeLists.txt
